Update Maven example: enable JDK 13 / preview in IDEA